--- a/pinion-widget/src/pinion-widget.scoped.css
+++ b/pinion-widget/src/pinion-widget.scoped.css
@@ -39,15 +39,15 @@ input[type=checkbox] {width:18px; height:18px;}
 }
 
 h1 {
-    @apply block text-3xl mb-3 w-full;
+    @apply block text-3xl mb-2 w-full;
 }
 
 h2 {
-    @apply block text-2xl mb-3 w-full;
+    @apply block text-2xl mb-2 w-full;
 }
 
 h3 {
-    @apply block text-xl mb-3 w-full;
+    @apply block text-xl mb-2 w-full;
 }
 
 ul {
@@ -55,7 +55,7 @@ ul {
 }
 
 p {
-    @apply block w-full my-1;
+    @apply block w-full mb-1;
 }
 
 nav ul {
@@ -64,4 +64,8 @@ nav ul {
 
 a {
     @apply text-blue-500 hover:text-blue-800 border-b-2 border-blue-500;
+}
+
+.z-max {
+    z-index: 999999;
 }
